[tool.pdm]
includes = []

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.6.0",
    "flake8>=4.0.1",
    "mypy>=0.961",
    "pandas-stubs>=1.4.3.220710",
    "pytest",
    "pytest-cov",
    "types-cachetools>=4.2.10",
    "types-certifi>=2021.10.8.3",
    "types-requests>=2.28.0",
    "types-setuptools>=62.6.1",
    "types-toml>=0.10.7",
    "types-python-dateutil>=2.8.18",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "mango-explorer"
version = "3.4.9"
description = "Python integration for https://mango.markets"
authors = [{ name = "pyz4", email = "pyz4" }]
dependencies = [
    "jsons>=1.6.3",
    "numpy>=1.23.1",
    "pandas>=1.4.3",
    "python-dateutil>=2.8.2",
    "requests>=2.28.1",
    "Rx>=3.2.0",
    "rxpy-backpressure>=1.0.0",
    "solana>=0.25.0",
    "websocket-client>=1.3.3",
    "zstandard>=0.17.0",
    "pyserum>=0.5.0a0",
    "anchorpy>=0.9.3",
    "base58>=2.1.1",
]
requires-python = ">=3.9,<3.11"
license = { text = "MIT" }
readme = "README.md"

[project.urls]
homepage = "https://mango.markets"
repository = "https://github.com/blockworks-foundation/mango-explorer"
documentation = "https://mybinder.org/v2/gh/blockworks-foundation/mango-explorer-examples/HEAD"

[project.optional-dependencies]
